--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -879,7 +879,7 @@ Loading variables...
           &lt;&lt;include &quot;empty&quot;&gt;&gt;
 	&lt;/div&gt;
 	&lt;div id=&quot;hachi_story&quot;&gt;
-           &lt;&lt;include &quot;hachi_act_1&quot;&gt;&gt;	
+           &lt;&lt;include &quot;hachi_act1&quot;&gt;&gt;	
 	&lt;/div&gt;
 &lt;/div&gt;
 &lt;&lt;/if&gt;&gt;
