--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 					}
 				}
 
-				window.onload = displayUrlParameter;
+				document.addEventListener('DOMContentLoaded', displayUrlParameter);
 
 				function checkVariables() {
 					// Check if latitude, longitude, and weatherDescription are not null
