--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1202,15 +1202,14 @@ console.log(variables().hachi_comment);
 $hachi_passage
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_act2false&quot; and $hachi_part_mov !== &quot;none&quot;&gt;&gt;
-  &lt;&lt;set $hachi_passage to &quot;hachi_act2_01/&#39;Greetings, furry friend! I am Lucia, guardian of this enchanted flower. You must be Hachi, the loyal Akita. Fate has brought you to me for a special purpose.
- &#39;Hachi&#39;s ears perk up with interest as Lucia explains the reason for their meeting./fairy&quot;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_act2_01/&#39;Greetings, furry friend! I am Lucia, guardian of this enchanted flower. You must be Hachi, the loyal Akita. Fate has brought you to me for a special purpose.&#39; Hachi&#39;s ears perk up with interest as Lucia explains the reason for their meeting./fairy&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_act2_01false&quot; and $hachi_part_mov !== &quot;none&quot;&gt;&gt;
   &lt;&lt;set $hachi_passage to &quot;hachi_act2_02/&#39;Life has brought us together for a reason, dear Hachi. Your human friend, Buro, is facing a journey of his own, and you must learn more about him to understand why you are destined to be together.&#39;/whine&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
   
-&lt;&lt; if $hachi_narrating == &quot;hachi_act2_02fasle&quot;&gt;&gt;
+&lt;&lt; if $hachi_narrating == &quot;hachi_act2_02false&quot;&gt;&gt;
 	&lt;&lt;set $hachi_passage to &quot;hachi_act2_03/Lucia gives Hachi a mission to seek out four colorful characters across the city, each with unique insights into Buro&#39;s life and their shared bond./f_aha&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
@@ -1218,7 +1217,7 @@ $hachi_passage
 	&lt;&lt;set $hachi_passage to &quot;hachi_act2_04/Visit the tram stop, the fountain, the stairs of the old building, and the bank. There, you will meet the people who hold the keys to unraveling your friendship./street&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
   
-&lt;&lt; if $hachi_narrating == &quot;hachi_act2_04fasle&quot;&gt;&gt;
+&lt;&lt; if $hachi_narrating == &quot;hachi_act2_04false&quot;&gt;&gt;
 	&lt;&lt;set $hachi_passage to &quot;hachi_act2_05/With a sense of purpose, Hachi feels ready to embark on an adventure that will deepen his understanding of Buro./barking3&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
