--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@
 				let cachedCheckpoints;
 				let lastCheckedIndex = 0; // Initialize the index of the last checked key
 				let currentCheckpoint = "none";
-				let chkPointDistance = 0;
+				let chkPointDistance = [];
 
 				async function checkCheckpoints() {
 					console.debug("Checking checkpoint");
@@ -902,20 +902,27 @@
 								// Process checkpoints within the current set
 								const checkpointSet = checkpoints[currentCheckpointKey];
 
+								// Reset the global chkPointDistance array before processing a new set
+								chkPointDistance = [];
+
 								for (const checkpoint of checkpointSet) {
 									const distance = calculateDistance(latitude, longitude, checkpoint.latitude, checkpoint.longitude);
-									chkPointDistance = distance.toFixed(2);
-									console.log('Checkpoint Latitude:', checkpoint.latitude, 'Checkpoint Longitude:', checkpoint.longitude, 'Distance:', chkPointDistance);
+									chkPointDistance.push(distance.toFixed(2)); // Store each distance in the array
+									console.log('Checkpoint Latitude:', checkpoint.latitude, 'Checkpoint Longitude:', checkpoint.longitude, 'Distance:', distance.toFixed(2));
 
 									if (distance <= radius) {
 										console.log('Checkpoint reached:', checkpoint.text);
 										currentCheckpoint = checkpoint.text;
 										window.success_Sound.play();
 										lastCheckedIndex++; // Move to the next key
+										// Reset the global chkPointDistance array for a new set
+										chkPointDistance = [];
 										return; // Exit the function when a checkpoint is reached
 									}
 								}
-								//console.log("No checkpoints reached in the current set.");
+
+								// Now chkPointDistance contains distances to all checkpoints in the current set
+								console.log('Distances to all checkpoints:', chkPointDistance);
 							} else {
 								console.log("No more checkpoint sets to check.");
 							}
