--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2113,11 +2113,10 @@ console.log(variables().hachi_comment);
 &lt;&lt;/liveblock&gt;&gt;
 
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="71" name="empty" tags="" position="450,1150" size="100,100">EMPTY</tw-passagedata><tw-passagedata pid="72" name="commentMovement_hachi" tags="" position="1050,200" size="200,100"> &lt;&lt;if typeof _prevhachiMovement === &#39;undefined&#39;&gt;&gt;&lt;&lt;set _prevhachiMovement to $hachi_movement&gt;&gt;&lt;&lt;elseif _prevhachiMovement !== $hachi_movement&gt;&gt;&lt;&lt;script&gt;&gt;makeShortComments(&#39;hachi&#39;, &#39;notmoving&#39;); console.log(variables().hachi_comment); &lt;&lt;/script&gt;&gt;&lt;&lt;set _prevhachiMovement to variables().hachi_movement&gt;&gt;&lt;&lt;if $hachi_comment !== _prevhachiComment&gt;&gt;&lt;&lt;set _prevhachiComment to $hachi_comment&gt;&gt;&lt;&lt;script&gt;&gt;var passage_temp = variables().hachi_comment;const renderedText = $((document).createDocumentFragment()).wiki(passage_temp).text();console.log(renderedText);variables().hachi_passage = renderedText;&lt;&lt;/script&gt;&gt;&lt;&lt;set $hachi_passage to variables().hachi_passage&gt;&gt;&lt;&lt;/if&gt;&gt;&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="73" name="commentMovement_avatar" tags="" position="1275,200" size="200,100">&lt;&lt;if typeof _prevavatarMovement === &#39;undefined&#39;&gt;&gt;&lt;&lt;set _prevavatarMovement to $avatar_movement&gt;&gt;&lt;&lt;elseif _prevavatarMovement !== $avatar_movement&gt;&gt;&lt;&lt;script&gt;&gt;makeShortComments(&#39;avatar&#39;, &#39;notmoving&#39;); console.log(variables().avatar_comment); &lt;&lt;/script&gt;&gt;&lt;&lt;set _prevavatarMovement to variables().avatar_movement&gt;&gt;&lt;&lt;if $avatar_comment !== _prevavatarComment&gt;&gt;&lt;&lt;set _prevavatarComment to $avatar_comment&gt;&gt;&lt;&lt;script&gt;&gt;var passage_temp = variables().avatar_comment;const renderedText = $((document).createDocumentFragment()).wiki(passage_temp).text();console.log(renderedText);variables().avatar_passage = renderedText;&lt;&lt;/script&gt;&gt;&lt;&lt;set $avatar_passage to variables().avatar_passage&gt;&gt;&lt;&lt;/if&gt;&gt;&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="74" name="eval_dist" tags="" position="300,1275" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set _distances to variables().avatar_checkpoint_dist.split(&quot;,&quot;)&gt;&gt;
 &lt;&lt;set $hasValueLessThan20 to false&gt;&gt;
 
-&lt;&lt;for _distance range _distances&gt;&gt;
-    &lt;&lt;if _distance &lt; 20&gt;&gt;
+&lt;&lt;for _distance range 1 to $avatar_checkpoint_dist.length()&gt;&gt;
+    &lt;&lt;if $avatar_checkpoint_dist.slice(_distance * 3 - 2, _distance * 3) &lt; 20&gt;&gt;
         &lt;&lt;set $hasValueLessThan20 to true&gt;&gt;
         &lt;&lt;break&gt;&gt;
     &lt;&lt;/if&gt;&gt;
@@ -2128,8 +2127,6 @@ console.log(variables().hachi_comment);
 &lt;&lt;else&gt;&gt;
     All values are 20 or greater.
 &lt;&lt;/if&gt;&gt;
-
-$avatar_checkpoint_dist
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
 	/*! SugarCube JS */
