--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2120,11 +2120,11 @@ console.log(variables().hachi_comment);
 &lt;&lt;script&gt;&gt;
 console.log(variables().avatar_checkpoint_dist);
 let valuesArray = variables().avatar_checkpoint_dist;
-let atLeastOneEqualTo20 = valuesArray.some(value =&gt; parseInt(value) &gt;= 20);
+let atLeastOneEqualTo20 = valuesArray.some(value =&gt; parseInt(value) &gt; 20);
 if (atLeastOneEqualTo20) {
-	variables().avatar_arriving=true;
-} else {
 	variables().avatar_arriving=false;
+} else {
+	variables().avatar_arriving=true;
 }
 &lt;&lt;/script&gt;&gt;
 &lt;&lt;if $avatar_arriving is true&gt;&gt;
