--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -666,12 +666,17 @@ window.makeComments = async function(character, key) {
         return sentence;
     };
 
-    // Set up a timer to display a random sentence every 15 seconds
-    characterData[character].intervalId = setInterval(() => {
-        const randomType = Math.random() < 0.5 ? 'observes' : 'soundscape';
-        const randomSentence = getNextSentence(randomType);
-        variables()[`${character}_comment`] = randomSentence;
-    }, 15000); // 15000 milliseconds = 15 seconds
+  // Set up a timer to display a random sentence every 15 seconds
+  characterData[character].intervalId = setInterval(() => {
+      let randomSentence;
+      if (variables().avatar_arriving) {
+          randomSentence = approachingFinal;
+      } else {
+          const randomType = Math.random() < 0.5 ? 'observes' : 'soundscape';
+          randomSentence = getNextSentence(randomType);
+      }
+      variables()[`${character}_comment`] = randomSentence;
+  }, 15000); // 15000 milliseconds = 15 seconds
 };
 
 // Function to stop making comments for a character
@@ -893,7 +898,7 @@ Loading variables...
 &lt;&lt;set $hachi_t_heading to &#39;&#39;&gt;&gt;
 &lt;&lt;set $hachi_t_route to &#39;&#39;&gt;&gt;
 
-&lt;!-- 
+
 &lt;&lt;repeat 20000ms&gt;&gt;
 &lt;&lt;script&gt;&gt;
 Promise.all([
@@ -1856,6 +1861,7 @@ console.log(variables().hachi_comment);
 &lt;&lt;/repeat&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
+&lt;&lt;include &quot;evalDIst_hachi&quot;&gt;&gt;
 &lt;&lt;if $hachi_checkpoint == &quot;hachi_statue&quot;&gt;&gt;
   &lt;&lt;script&gt;&gt;
   stopComments(&#39;hachi&#39;);
@@ -2114,8 +2120,7 @@ console.log(variables().hachi_comment);
     &lt;&lt;/if&gt;&gt;
 &lt;&lt;/liveblock&gt;&gt;
 
-&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="71" name="empty" tags="" position="450,1150" size="100,100">EMPTY</tw-passagedata><tw-passagedata pid="72" name="commentMovement_hachi" tags="" position="1050,200" size="200,100"> &lt;&lt;if typeof _prevhachiMovement === &#39;undefined&#39;&gt;&gt;&lt;&lt;set _prevhachiMovement to $hachi_movement&gt;&gt;&lt;&lt;elseif _prevhachiMovement !== $hachi_movement&gt;&gt;&lt;&lt;script&gt;&gt;makeShortComments(&#39;hachi&#39;, &#39;notmoving&#39;); console.log(variables().hachi_comment); &lt;&lt;/script&gt;&gt;&lt;&lt;set _prevhachiMovement to variables().hachi_movement&gt;&gt;&lt;&lt;if $hachi_comment !== _prevhachiComment&gt;&gt;&lt;&lt;set _prevhachiComment to $hachi_comment&gt;&gt;&lt;&lt;script&gt;&gt;var passage_temp = variables().hachi_comment;const renderedText = $((document).createDocumentFragment()).wiki(passage_temp).text();console.log(renderedText);variables().hachi_passage = renderedText;&lt;&lt;/script&gt;&gt;&lt;&lt;set $hachi_passage to variables().hachi_passage&gt;&gt;&lt;&lt;/if&gt;&gt;&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="73" name="commentMovement_avatar" tags="" position="1275,200" size="200,100">&lt;&lt;if typeof _prevavatarMovement === &#39;undefined&#39;&gt;&gt;&lt;&lt;set _prevavatarMovement to $avatar_movement&gt;&gt;&lt;&lt;elseif _prevavatarMovement !== $avatar_movement&gt;&gt;&lt;&lt;script&gt;&gt;makeShortComments(&#39;avatar&#39;, &#39;notmoving&#39;); console.log(variables().avatar_comment); &lt;&lt;/script&gt;&gt;&lt;&lt;set _prevavatarMovement to variables().avatar_movement&gt;&gt;&lt;&lt;if $avatar_comment !== _prevavatarComment&gt;&gt;&lt;&lt;set _prevavatarComment to $avatar_comment&gt;&gt;&lt;&lt;script&gt;&gt;var passage_temp = variables().avatar_comment;const renderedText = $((document).createDocumentFragment()).wiki(passage_temp).text();console.log(renderedText);variables().avatar_passage = renderedText;&lt;&lt;/script&gt;&gt;&lt;&lt;set $avatar_passage to variables().avatar_passage&gt;&gt;&lt;&lt;/if&gt;&gt;&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="74" name="eval_dist" tags="" position="300,1275" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;liveblock&gt;&gt;
+&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="71" name="empty" tags="" position="450,1150" size="100,100">EMPTY</tw-passagedata><tw-passagedata pid="72" name="commentMovement_hachi" tags="" position="1050,200" size="200,100"> &lt;&lt;if typeof _prevhachiMovement === &#39;undefined&#39;&gt;&gt;&lt;&lt;set _prevhachiMovement to $hachi_movement&gt;&gt;&lt;&lt;elseif _prevhachiMovement !== $hachi_movement&gt;&gt;&lt;&lt;script&gt;&gt;makeShortComments(&#39;hachi&#39;, &#39;notmoving&#39;); console.log(variables().hachi_comment); &lt;&lt;/script&gt;&gt;&lt;&lt;set _prevhachiMovement to variables().hachi_movement&gt;&gt;&lt;&lt;if $hachi_comment !== _prevhachiComment&gt;&gt;&lt;&lt;set _prevhachiComment to $hachi_comment&gt;&gt;&lt;&lt;script&gt;&gt;var passage_temp = variables().hachi_comment;const renderedText = $((document).createDocumentFragment()).wiki(passage_temp).text();console.log(renderedText);variables().hachi_passage = renderedText;&lt;&lt;/script&gt;&gt;&lt;&lt;set $hachi_passage to variables().hachi_passage&gt;&gt;&lt;&lt;/if&gt;&gt;&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="73" name="commentMovement_avatar" tags="" position="1275,200" size="200,100">&lt;&lt;if typeof _prevavatarMovement === &#39;undefined&#39;&gt;&gt;&lt;&lt;set _prevavatarMovement to $avatar_movement&gt;&gt;&lt;&lt;elseif _prevavatarMovement !== $avatar_movement&gt;&gt;&lt;&lt;script&gt;&gt;makeShortComments(&#39;avatar&#39;, &#39;notmoving&#39;); console.log(variables().avatar_comment); &lt;&lt;/script&gt;&gt;&lt;&lt;set _prevavatarMovement to variables().avatar_movement&gt;&gt;&lt;&lt;if $avatar_comment !== _prevavatarComment&gt;&gt;&lt;&lt;set _prevavatarComment to $avatar_comment&gt;&gt;&lt;&lt;script&gt;&gt;var passage_temp = variables().avatar_comment;const renderedText = $((document).createDocumentFragment()).wiki(passage_temp).text();console.log(renderedText);variables().avatar_passage = renderedText;&lt;&lt;/script&gt;&gt;&lt;&lt;set $avatar_passage to variables().avatar_passage&gt;&gt;&lt;&lt;/if&gt;&gt;&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="74" name="evalDist_avatar" tags="" position="1275,75" size="200,100">&lt;&lt;nobr&gt;&gt;
 &lt;&lt;set $avatar_arriving to false&gt;&gt;
 &lt;&lt;script&gt;&gt;
 let valuesArray = variables().avatar_checkpoint_dist;
@@ -2126,13 +2131,17 @@ if (atLeastOneEqualTo20) {
 	variables().avatar_arriving=false;
 }
 &lt;&lt;/script&gt;&gt;
-&lt;&lt;if $avatar_arriving is true&gt;&gt;
-Almost there
-&lt;&lt;else&gt;&gt;
-Not there
-&lt;&lt;/if&gt;&gt;
-
-&lt;&lt;/liveblock&gt;&gt;
+&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="75" name="evalDist_hachi" tags="" position="1050,75" size="200,100">&lt;&lt;nobr&gt;&gt;
+&lt;&lt;set $hachi_arriving to false&gt;&gt;
+&lt;&lt;script&gt;&gt;
+let valuesArray = variables().hachi_checkpoint_dist;
+let atLeastOneEqualTo20 = valuesArray.some(value =&gt; parseInt(value) &lt; 20);
+if (atLeastOneEqualTo20) {
+	variables().hachi_arriving=true;
+} else {
+	variables().hachi_arriving=false;
+}
+&lt;&lt;/script&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
 	/*! SugarCube JS */
