--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1861,7 +1861,7 @@ console.log(variables().hachi_comment);
 &lt;&lt;/repeat&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
-&lt;&lt;include &quot;evalDIst_hachi&quot;&gt;&gt;
+&lt;&lt;include &quot;evalDist_hachi&quot;&gt;&gt;
 &lt;&lt;if $hachi_checkpoint == &quot;hachi_statue&quot;&gt;&gt;
   &lt;&lt;script&gt;&gt;
   stopComments(&#39;hachi&#39;);
